quark/test/quark/AST/Errors/typeNotDeclared-004.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

type Vehicle {}

fn foo: -> Veicle {}
// CHECK:Error: type 'Veicle' not found!
